fix block editor z-index issue for link options at the bottom of the page

--- a/packages/editor/src/components/visual-editor/style.scss
+++ b/packages/editor/src/components/visual-editor/style.scss
@@ -7,6 +7,7 @@
 
 	// Centralize the editor horizontally (flex-direction is column).
 	align-items: center;
+	z-index: 20;
 
 	&.is-resizable {
 		max-height: 100%;
